Apply modernization API replacements