@@ -173,7 +173,7 @@ public class JavaMapperGenerator extends AbstractJavaGenerator {
     }
 
     public List<CompilationUnit> getExtraCompilationUnits() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     public static class Builder extends AbstractJavaGeneratorBuilder<Builder> {
